[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/entities/InidividualTaskMouse.gd" type="Script" id=1]
[ext_resource path="res://assets/Red-Circle.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/kirifont/Kirifont.tres" type="DynamicFont" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 22.0227

[sub_resource type="CircleShape2D" id=2]
radius = 220.227

[node name="IndividualTaskMouse" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="AvailabilityArea" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AvailabilityArea"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -330.0
margin_top = -250.0
margin_right = -290.0
margin_bottom = -236.0
custom_fonts/font = ExtResource( 3 )
text = "10"
align = 1
valign = 1

[connection signal="mouse_entered" from="Sprite/AvailabilityArea" to="." method="_on_AvailabilityArea_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/AvailabilityArea" to="." method="_on_AvailabilityArea_mouse_exited"]
